# qkd_kme_server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TROUBLESHOOTING.md  config_kme1.json  config_kme1.json5  config_kme2.json  config_kme2.json5  test_database_services_docker_compose.yml
.github/: FUNDING.yml
.github/workflows/: rust.yml
assets/: certificates_final_scheme.drawio
benches/: common.rs  enc_keys_remote.rs
benches/data/: test_kme2_config.json5  test_kme2_config_macos.json5  test_kme_config.json5  test_kme_config_macos.json5
certs/: CA-zone1.crt  CA-zone1.srl  README.md  kme1.csr  kme1.key  sae1.cnf  sae2.csr
certs/inter_kmes/: ca_kme1.crt  ca_kme1.key  ca_kme2.crt  ca_kme2.key  client-kme1-to-kme2.crt  client-kme1-to-kme2.csr  client-kme1-to-kme2.key  client-kme1-to-kme2.pem  client-kme1-to-kme2.pfx  client-kme2-to-kme1.crt  client-kme2-to-kme1.csr  client-kme2-to-kme1.key  client-kme2-to-kme1.pem  client-kme2-to-kme1.pfx  generate_kme_ca.sh  generate_kme_clients.sh  inter-kme-client.cnf  kme1-to-kme2.pem  kme1-to-kme2.pfx  kme1_server.crt  kme1_server.key  kme2-to-kme1.pem  kme2-to-kme1.pfx  kme2_server.crt  kme2_server.key  root-ca-kme1.crt  root-ca-kme1.csr  root-ca-kme1.key  root-ca-kme1.srl  root-ca-kme2.crt  root-ca-kme2.csr  root-ca-kme2.key  root-ca-kme2.srl
certs/kme-1-local-zone/: ca.crt  ca.key  client_1.crt  client_1.key  client_1.pfx  client_1_cert.pem  client_2.crt  client_2.key  client_2.pfx  client_2_cert.pem  kme_server.crt  kme_server.key
certs/kme-2-local-zone/: ca.crt  ca.key  client_3.crt  client_3.key  client_3.pfx  client_3_cert.pem  kme_server.crt  kme_server.key
certs/zone1/: CA-zone1.key  CA-zone1.srl  kme1.crt  pass.txt  sae1.crt  sae1.csr  sae1.key  sae1.pem  sae1.pfx  sae2.cnf  sae2.crt  sae2.key  sae2.pem  sae2.pfx
certs/zone2/: CA-zone2.crt  CA-zone2.csr  CA-zone2.key  CA-zone2.srl  client.cnf  generate-client-cert.sh  generate-root-ca.sh  generate_kme2_server_cert.sh  kme2.crt  kme2.csr  kme2.key  sae3.crt  sae3.csr  sae3.key  sae3.pem  sae3.pfx
docs/: api.md  config.md
raw_keys/: 211202_1205_94889199.cor  211202_1208_6DB301BA.cor  211202_1210_2655B746.cor  211202_1221_47BE3A07.cor  211202_1230_DBFE95B7.cor
raw_keys/kme-1-1/: 211202_1159_CD6ADBF2.cor
raw_keys/kme-1-2/: 211202_1201_9961A847.cor  211202_1203_4CC5B386.cor  211202_1212_6844D5F5.cor  211202_1214_7FADACCC.cor  211202_1216_BFD17354.cor  211202_1219_9FE60FC0.cor  211202_1223_C350632B.cor  211202_1225_A7A6EF2D.cor  211202_1228_F7F2EC9C.cor
src/: lib.rs  main.rs
src/config/: mod.rs
src/entropy/: mod.rs
src/event_subscription/: mod.rs
src/qkd_manager/: config_extractor.rs  http_request_obj.rs  http_response_obj.rs  init_qkd_database.sql  init_qkd_database_mysql.sql  init_qkd_database_postgres.sql  init_qkd_database_sqlite.sql  key_handler.rs  mod.rs  router.rs
src/routes/: http_response_body.rs  mod.rs  request_context.rs
src/routes/inter_kmes_routes/: mod.rs
src/routes/keys/: get_key.rs  mod.rs  (+1 more)
src/server/: certificates.rs  mod.rs
tests/: config_parsing.rs  dec_keys.rs  enc_keys.rs  entropy.rs  get_root.rs  key_status.rs  key_transfer_remote_kme.rs  persistent_db.rs  sae_info.rs
tests/common/: mod.rs  objects.rs  util.rs
tests/data/: conflict_body.json  dec_keys.json  dec_keys_post_req_body.json  dec_keys_post_req_body_multiple.json  dec_keys_post_req_body_multiple_remote.json  dec_keys_post_req_wrong_body.json  enc_keys.json  enc_keys_not_enough.json  enc_keys_remote_multiple.json  gateway_timeout_kme_body.json  key_status.json  key_status_lot_of_stored_keys.json  not_found_body.json  precondition_failed_body.json  sae_info_me.json  test_kme2_config.json  test_kme2_config.json5  test_kme2_config_macos.json  test_kme2_config_macos.json5  test_kme_config.json  test_kme_config.json5  test_kme_config_json_error.json5  test_kme_config_macos.json  test_kme_config_macos.json5  test_kme_config_mariadb.json5  test_kme_config_mysql.json5  test_kme_config_postgres.json5  test_kme_config_sqlite.json5  total_entropy.json
tests/tmp/: kme.db
(+21 files in other folders)
