[package]
name = "qkd_kme_server"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Prevost <thomas.prevost@univ-cotedazur.fr>"]
description = "QKD Key Management Entity Server, following the ETSI GS QKD 014 standard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.7"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version="1.47", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1.12"
x509-parser = "0.17"
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.2"
sha1 = "0.10"
uuid = "1.18"
sqlite = "0.37"
base64 = "0.22"
rustls-pemfile = "2.2"
log = "0.4"
simple_logger = "5.0"
notify = "8.2"
url = "2.5"
chrono = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "blocking", "json"], default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
reqwest = { version = "0.12" , features = ["native-tls", "blocking", "json"] }

[dev-dependencies]
serial_test = "3.2"
const_format = "0.2"
regex = "1.11"