[package]
name = "qkd_kme_server"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Prevost <contact@thomasarmel.fr>"]
description = "QKD Key Management Entity Server, following the ETSI GS QKD 014 standard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "1.7"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
tokio = { version="1.47", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pki-types = "1.12"
x509-parser = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json5 = "0.2"
sha1 = "0.10"
uuid = "1.18"
base64 = "0.22"
rustls-pemfile = "2.2"
log = "0.4"
simple_logger = "5.0"
notify = "8.2"
url = "2.5"
chrono = "0.4"
bounded-integer = "0.6"
sqlx = {version = "0.8", features = ["all-databases", "runtime-tokio"]}
futures = "0.3"
uriparse = "0.6"
sqlx-core = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "json"], default-features = false }

[target.'cfg(not(target_os = "macos"))'.dependencies]
reqwest = { version = "0.12" , features = ["native-tls", "json"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = {version = "0.10", features = ["vendored"]} # To allow static linking on Linux

[dev-dependencies]
serial_test = "3.2"
const_format = "0.2"
regex = "1.11"
criterion = { version = "0.7", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "enc_keys_remote"
harness = false